apps/kopic/dev/ws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopic-dev-ws
spec:
  selector:
    matchLabels:
      app: kopic-dev-ws
  template:
    metadata:
      labels:
        app: kopic-dev-ws
    spec:
      terminationGracePeriodSeconds: 4500
      containers:
      - name: kopic-dev-ws
        image: ghcr.io/mohyeonman/kopic-ws-k3s
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits:
            memory: 2Gi
