apps/kopic/dev/ws/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kopic-dev-ws
spec:
  serviceName: kopic-dev-ws-headless
  replicas: 1
  selector:
    matchLabels:
      app: kopic-dev-ws
  template:
    metadata:
      labels:
        app: kopic-dev-ws
    spec:
      containers:
      - name: kopic-dev-ws
        image: ghcr.io/mohyeonman/kopic-ws-k3s
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 300m
            memory: 1Gi
          limits:
            memory: 3Gi
